--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2021-08-03  Danilo Chang
+
+	* generic/tclopencl.c: Use long type to get length
+
 2021-08-01  Danilo Chang
 
 	* README.md: Add examples
