--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2021-08-04  Danilo Chang
+
+	* Update and fix version check for clCreateImage
+
 2021-08-03  Danilo Chang
 
 	* Bump version to v0.2
